--- a/css/elementStyling.css
+++ b/css/elementStyling.css
@@ -76,3 +76,19 @@ h3 {
     width: 3in;
     height: 2in;
 }
+
+
+.tocLevel2{
+    font-size: .9em;
+    /* line-height: 0.1em; */
+}
+.tocLevel3{
+    font-size: .9em;
+    /* line-height: 0.1em; */
+    margin-left: .5em;
+}
+.tocLevel4{
+    font-size: .9em;
+    /* line-height: 0.1em; */
+    margin-left: .75em;
+}
