--- a/css/elementStyling.css
+++ b/css/elementStyling.css
@@ -20,6 +20,12 @@ h3 {
     font-weight: bold;
 }
 
+
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+/*DOCUMENT TITLE PAGE SPECIAL FORMATTING*/
+/*----------------------------------------------*/
+/*----------------------------------------------*/
 .titlePage1{
     font-size: 3em;
     text-align: center;
@@ -36,7 +42,20 @@ h3 {
     font-size: 1.25em;
     text-align: center;
 }
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+/*----------------------------------------------*/
 
+
+
+
+
+
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+/*INSPECTION SECTION SPECIAL FORMATTING*/
+/*----------------------------------------------*/
+/*----------------------------------------------*/
 .tableInspections {
     width: 90%;
 }
@@ -48,19 +67,25 @@ h3 {
 
 .cellInspectionInterval {
     width: 5%;
-    min-width: 4em;
+    min-width: 6em;
 }
 
 .cellInspectionText {
     width: 90%;
 }
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+/*----------------------------------------------*/
 
 
 
 
 
-
-
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+/*STANDARD IMAGE FORMATTING*/
+/*----------------------------------------------*/
+/*----------------------------------------------*/
 .imageCentered_6x8{
     display: block;
     margin-left: auto;
@@ -76,8 +101,29 @@ h3 {
     width: 3in;
     height: 2in;
 }
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+/*----------------------------------------------*/
 
 
+
+
+
+
+
+
+
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+/*TABLE OF CONTENTS STUFF*/
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+.tocHeader{
+    text-align: center;
+    font-weight: bold;
+    font-size: .9em;
+    text-decoration: underline;
+}
 .tocLevel2{
     font-size: .9em;
     /* line-height: 0.1em; */
@@ -92,3 +138,31 @@ h3 {
     /* line-height: 0.1em; */
     margin-left: .75em;
 }
+.tocGrid{
+    display: grid;
+    grid-template-columns: auto max-content;
+    align-items: end;
+
+    position: relative;
+    overflow: hidden;
+}
+.tocLeaders::after{
+    position: absolute;
+    padding-left: .25ch;
+    content: " . . . . . . . . . . . . . . . . . . . "
+        ". . . . . . . . . . . . . . . . . . . . . . . "
+        ". . . . . . . . . . . . . . . . . . . . . . . "
+        ". . . . . . . . . . . . . . . . . . . . . . . "
+        ". . . . . . . . . . . . . . . . . . . . . . . "
+        ". . . . . . . . . . . . . . . . . . . . . . . "
+        ". . . . . . . . . . . . . . . . . . . . . . . ";
+    text-align: right;
+}
+.tocPageNum::after{
+    content: target-counter(attr(href), pageDesc);
+}
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+
+
