--- a/css/elementStyling.css
+++ b/css/elementStyling.css
@@ -82,7 +82,7 @@ h3 {
 
 /*----------------------------------------------*/
 /*----------------------------------------------*/
-/*WARNING, CAUTION, AND NOTE BOXESG*/
+/*WARNING, CAUTION, AND NOTE BOXES*/
 /*----------------------------------------------*/
 /*----------------------------------------------*/
 .boxCautionSmall{
@@ -133,6 +133,65 @@ h3 {
     margin-bottom: .2em;
 }
 .boxCautionLargeText{
+    margin-top: .2em;
+    margin-bottom: .2em;
+}
+
+
+.boxWarningSmall{
+    width: 3in;
+    border: 1px solid red;
+    text-align: center;
+    margin: auto;
+    margin-top: .2em;
+    margin-bottom: .2em;
+}
+.boxWarningSmallHeader{
+    color: red;
+    font-weight: bold;
+    margin-top: .2em;
+    margin-bottom: .2em;
+}
+.boxWarningSmallText{
+    color: red;
+    margin-top: .2em;
+    margin-bottom: .2em;
+}
+.boxWarningMedium{
+    width: 4.5in;
+    border: 1px solid red;
+    text-align: center;
+    margin: auto;
+    margin-top: .2em;
+    margin-bottom: .2em;
+}
+.boxWarningMediumHeader{
+    font-weight: bold;
+    color: red;
+    margin-top: .2em;
+    margin-bottom: .2em;
+}
+.boxWarningMediumText{
+    color: red;
+    margin-top: .2em;
+    margin-bottom: .2em;
+}
+.boxWarningLarge{
+    width: 6in;
+    border: 1px solid red;
+    text-align: center;
+    margin: auto;
+    margin-top: .2em;
+    margin-bottom: .2em;
+}
+.boxWarningLargeHeader{
+    color: red;
+    font-weight: bold;
+    margin-top: .2em;
+    margin-bottom: .2em;
+}
+.boxWarningLargeText{
+    color: red;
     margin-top: .2em;
     margin-bottom: .2em;
 }
