--- a/css/elementStyling.css
+++ b/css/elementStyling.css
@@ -20,6 +20,9 @@ h3 {
     font-weight: bold;
 }
 
+.centerText{
+    text-align: center;
+}
 
 /*----------------------------------------------*/
 /*----------------------------------------------*/
@@ -216,6 +219,30 @@ h3 {
 /*----------------------------------------------*/
 /*----------------------------------------------*/
 /*----------------------------------------------*/
+
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+/*STANDARD TABLE FORMATTING*/
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+.plainTableLarge{
+    border: 1px solid black;
+    border-collapse: collapse;
+    width: 6in;
+}
+.plainTableHeaderCell{
+    border: 1px solid black;
+    border-collapse: collapse;
+    background-color: lightgray;
+}
+.plainTableNormalCell{
+    border: 1px solid black;
+    border-collapse: collapse;
+}
 
 
 
