added lubrication section

--- a/css/elementStyling.css
+++ b/css/elementStyling.css
@@ -24,6 +24,10 @@ h3 {
     text-align: center;
 }
 
+.tabOver{
+    padding-left: 40px;
+}
+
 /*----------------------------------------------*/
 /*----------------------------------------------*/
 /*DOCUMENT TITLE PAGE SPECIAL FORMATTING*/
