--- a/css/elementStyling.css
+++ b/css/elementStyling.css
@@ -23,7 +23,9 @@ h3 {
 .centerText{
     text-align: center;
 }
-
+.boldText{
+    font-weight: bold;
+}
 .tabOver{
     padding-left: 40px;
 }
@@ -81,6 +83,25 @@ h3 {
 
 .cellInspectionText {
     width: 90%;
+}
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+
+
+
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+/*LIMITATIONS SECTION SPECIAL FORMATTING*/
+/*----------------------------------------------*/
+/*----------------------------------------------*/
+.limitationsTable {
+    width: 6in;
+}
+
+.limitationsTableCell {
+    border: 1px solid black;
+    border-collapse: collapse;
 }
 /*----------------------------------------------*/
 /*----------------------------------------------*/
