table of contents and RH navbar

--- a/css/pagedjs.css
+++ b/css/pagedjs.css
@@ -45,12 +45,20 @@
 
 
 
+.sideBarRight{
+    position:running(sideBarRight);
+}
+
+@page :right{
+    @right-bottom{
+        content: element(sideBarRight)
+    }
+}
 
 
 
-
-
-
+/*-------------------------------------------------------*/
+/*-------------------------------------------------------*/
 /*-------------------------------------------------------*/
 /*HEADERS AND PAGE NUMBERS*/
 /**/
@@ -233,7 +241,8 @@ body{
 /**/
 /**/
 /*-------------------------------------------------------*/
-
+/*-------------------------------------------------------*/
+/*-------------------------------------------------------*/
 
 
 
