--- a/css/elementStyling.css
+++ b/css/elementStyling.css
@@ -268,6 +268,7 @@ li{
 }
 .plainTableHeaderCell{
     border: 1px solid black;
+    font-weight: bold;
     border-collapse: collapse;
     background-color: lightgray;
 }
