--- a/css/elementStyling.css
+++ b/css/elementStyling.css
@@ -323,7 +323,20 @@ li{
     width: 3in;
     height: 2in;
 }
-
+.imageCentered_4x2{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 4in;
+    height: 2in;
+}
+.imageCentered_5x2{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 5in;
+    height: 2in;
+}
 /*----------------------------------------------*/
 /*----------------------------------------------*/
 /*----------------------------------------------*/
