--- a/css/elementStyling.css
+++ b/css/elementStyling.css
@@ -323,6 +323,13 @@ li{
     width: 3in;
     height: 2in;
 }
+.imageCentered_3x5{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 3in;
+    height: 5in;
+}
 .imageCentered_4x2{
     display: block;
     margin-left: auto;
@@ -330,12 +337,26 @@ li{
     width: 4in;
     height: 2in;
 }
+.imageCentered_4x3{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 4in;
+    height: 3in;
+}
 .imageCentered_5x2{
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 5in;
     height: 2in;
+}
+.imageCentered_3x4{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 3in;
+    height: 4in;
 }
 /*----------------------------------------------*/
 /*----------------------------------------------*/
