--- a/css/elementStyling.css
+++ b/css/elementStyling.css
@@ -351,6 +351,13 @@ li{
     width: 5in;
     height: 2in;
 }
+.imageCentered_5x3{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 5in;
+    height: 3in;
+}
 .imageCentered_3x4{
     display: block;
     margin-left: auto;
