--- a/css/elementStyling.css
+++ b/css/elementStyling.css
@@ -45,6 +45,9 @@ tr{
 .marginTop1.plainTableLarge{
     margin-top: 1em;
 }
+.marginTop1.plainTableMedium{
+    margin-top: 1em;
+}
 
 /*----------------------------------------------*/
 /*----------------------------------------------*/
