--- a/css/elementStyling.css
+++ b/css/elementStyling.css
@@ -404,6 +404,13 @@ tr{
     width: 5in;
     height: 3in;
 }
+.imageCentered_5x4{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 5in;
+    height: 4in;
+}
 .imageCentered_3x4{
     display: block;
     margin-left: auto;
