--- a/css/elementStyling.css
+++ b/css/elementStyling.css
@@ -348,6 +348,13 @@ tr{
     width: 6in;
     height: 4in;
 }
+.imageCentered_6x2{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 6in;
+    height: 2in;
+}
 .imageCentered_3x2{
     display: block;
     margin-left: auto;
